align-fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -120,24 +120,43 @@ h4 {
 .courses-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 2%;
   padding: 25px 3% 25px 5%;
+}
+.course {
+  border-radius: 10px;
+  box-shadow: 5px 5px 20px lightgrey;
+  padding-left: 5%;
 }
 .course img {
   width: 225px;
   height: 105px;
-}
-.course-info {
-  display: flex;
-  align-items: center;
+  padding-top: 15px;
 }
 .author {
   margin-top: 0;
   font-size: 15px;
   color: #ed6b4f;
+  margin-bottom: 0;
+}
+.course-info {
+  display: flex;
+  align-items: center;
 }
 .fa-star {
   color: #ffc014;
 }
 #empty {
   color: #aeaeae;
+}
+.rating {
+  margin-right: 15px;
+}
+.hour p {
+  background: #ffe4e7;
+  color: red;
+  padding: 5px 5px;
+  border-radius: 15px;
+  letter-spacing: 2px;
+  margin-left: 15px;
 }
